8153340: Disallow misconfiguration and improve the consistency of allocation prefetching

Improve allocation prefetching.

Reviewed-by: kvn